# -JSK-85-F1-Strategist-and-Data-Visualizer

./: LICENSE  README.md  SCHEMA.md  app.py  pyproject.toml  readme_machine.py  reddit_machine.py
Data/: compound_selection.toml
Data/grand_prix/: all_grand_prix_laps_2018.xlsx  all_grand_prix_laps_2019.xlsx  all_grand_prix_laps_2020.xlsx  all_grand_prix_laps_2021.xlsx  all_grand_prix_laps_2022.xlsx  all_grand_prix_laps_2023.xlsx  all_grand_prix_laps_2024.xlsx  transformed_grand_prix_laps_2018.xlsx  transformed_grand_prix_laps_2019.xlsx  transformed_grand_prix_laps_2020.xlsx  transformed_grand_prix_laps_2021.xlsx  transformed_grand_prix_laps_2022.xlsx  transformed_grand_prix_laps_2023.xlsx  transformed_grand_prix_laps_2024.xlsx
Data/sprint/: all_sprint_laps_2021.numbers  all_sprint_laps_2021.xlsx  all_sprint_laps_2022.numbers  all_sprint_laps_2022.xlsx  all_sprint_laps_2023.numbers  all_sprint_laps_2023.xlsx  all_sprint_laps_2024.numbers  all_sprint_laps_2024.xlsx  transformed_sprint_laps_2021.numbers  transformed_sprint_laps_2021.xlsx  transformed_sprint_laps_2022.numbers  transformed_sprint_laps_2022.xlsx  transformed_sprint_laps_2023.numbers  transformed_sprint_laps_2023.xlsx  transformed_sprint_laps_2024.numbers  transformed_sprint_laps_2024.xlsx
f1_visualization/: _consts.py  _types.py  preprocess.py  visualization.py
f1_visualization/plotly_dash/: graphs.py  layout.py  visualization_config.toml
