[project]
version = "1.0.0"
name = "f1_visualization"
description = "Transformed data and visualization tools for all Formula 1 races since 2018"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastf1 >= 3.4.4",
    "pandas >= 1.5.0",
    "matplotlib >= 3.7.0",
    "numpy >= 1.26.0",
    "seaborn >= 0.13.0",
    "tomli >= 2.0.0",
    "tomli-w >= 1.0.0",
    "pre-commit >= 3.6.0",
    "click >= 8.0.0",
    "dash >= 2.9.0",
    "dash-bootstrap-components >= 1.6.0",
]
[project.optional-dependencies]
performance = ["orjson >= 3.9.0"]
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["f1_visualization"]
[tool.ruff]
include = ["f1_visualization/*.py", "./*.py"]
line-length = 96
indent-width = 4
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "N",
    "D1",
    "D2",
    "D3",
    "D400",
    "D401",
    "D402",
    "D403",
    "D404",
    "BLE",
    "B",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "NPY",
]

ignore = [
    "D203",
    "D212",
    "PD901",
    "B905",
    "PTH123",
]